kustomize/base/confluent/connect-bootstrap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: connect
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: connect
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: connect-bootstrap
  labels:
    confluent-platform: "true"
    cr-name: connect
    type: connect
spec:
  ports:
    - name: external
      port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: connect
    clusterId: confluent
    confluent-platform: "true"
    type: connect
  sessionAffinity: None
  type: ClusterIP
