kustomize/base/confluent/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-with-sni
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - kafka.my.domain.com
        - b0.my.domain.com
        - b1.my.domain.com
        - b2.my.domain.com
        - ksqldb.my.domain.com
        - connect.my.domain.com
        - schemaregistry.my.domain.com
  rules:
    - host: kafka.my.domain.com
      http:
        paths:
          - backend:
              serviceName: kafka-bootstrap
              servicePort: 9092
    - host: b0.my.domain.com
      http:
        paths:
          - backend:
              serviceName: kafka-0-internal
              servicePort: 9092
    - host: b1.my.domain.com
      http:
        paths:
          - backend:
              serviceName: kafka-1-internal
              servicePort: 9092
    - host: b2.my.domain.com
      http:
        paths:
          - backend:
              serviceName: kafka-2-internal
              servicePort: 9092
    - host: ksqldb.my.domain.com
      http:
        paths:
          - backend:
              serviceName: ksqldb-bootstrap
              servicePort: 8088
    - host: connect.my.domain.com
      http:
        paths:
          - backend:
              serviceName: connect-bootstrap
              servicePort: 8083
    - host: schemaregistry.my.domain.com
      http:
        paths:
          - backend:
              serviceName: schemaregistry-bootstrap
              servicePort: 8081
